# spongekit

./: .gitignore  .gitignore 2  LICENSE  LICENSE.txt  Makefile  README.md  Readme.md  app.py  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
spongekit_core/: __init__.py  config.py  gis.py  hydro.py  io.py  rainfall.py  report.py  scenarios.py  version.py
spongekit_core/v0_1/: SpongeKit_MVP_Notebook.ipynb  core.py
tests/: sample_hyetograph.csv  test_config.py  test_hydro.py  test_rainfall.py  test_scenarios.py  test_smoke.py
